# json-redactor

./: Makefile  README.md  pyproject.toml
src/json_redactor/: __init__.py  core.py
tests/: test_core.py
