[project]
name = "json-redactor"
version = "0.1.0"
description = "Redacts or hashes sensitive data inside an arbitrarily nested JSON document"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "json-stream~=2.4",
    "typer~=0.20.0",
]

[project.scripts]
json-redactor = "json_redactor:main"

[dependency-groups]
dev = [
    "mypy~=1.19",
    "pytest~=9.0",
    "ruff~=0.14.8",
]

[tool.mypy]
strict = true
warn_unreachable = true
enable_error_code = ["exhaustive-match"]
show_absolute_path = true

[[tool.mypy.overrides]]
module = "json_stream.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[build-system]
requires = ["uv_build~=0.9.18"]
build-backend = "uv_build"
